# Portico

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  NEXT-STEP  README.md
.cursor/rules/: README.md  app.mdc  general.mdc  python_bridge.mdc  rust_engine.mdc  server_bridge.mdc  server_engine.mdc  shared_crate.mdc  shared_rust.mdc
app/: .env-example  .prettierrc  README.txt  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.ts
app/src/: app.css  app.html  app.postcss  app.test.ts  setupTests.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
common/: Cargo.toml  README.txt
design/: 1-mvp.md  demo-checklist.md  frontend-to-tauri-refactor.md  shared-data-model-improvements.md
designs/: demo-checklist.md
docs/: GLOSSARY.md  README.md  SUMMARY.md
docs/01-overview/: vision.md
docs/02-architecture/: backend.md  big-picture.md  data-flow.md  (+3 more)
lib/: README.txt
lib/shared/: .env-example  Cargo.toml  Dockerfile
lib/shared/.sqlx/: query-04777aa27d255d53e9c0245509aeca311207e272fc8a31eafac85c03de417246.json  query-15642e2c97c2aca52c6085c6fd66541417834f735daf8e656256692f3f0caf68.json  query-2727f1d8e297a0094207aa992b955d52071f38368b6a1ec57a2897bc116751c6.json  query-364a72cd94ff745d184795e4612ececc5b2a4b10954d361f2a8b33e00fbfe48c.json  query-3f1ca30747abde01d730c57b20283b7dfeed4af374d506b132ee815460c512c5.json  query-45eb49cfc34bff14e462292d0432960addcaabedc7490d5b1406a17fdff103fc.json  query-4fd8786c5bdc5c6bce608efcdf1283236ec932aa4eb239bf8cc227d7d371a90e.json  query-951695f29d9c89dbfa99f712f093430ae4acb6e8c6f3d7980b81c7240e4d4c0f.json  query-a8d84b570506ba120c19b21fc25614d02cc419788dcdb951c77ad39b5b81cf72.json  query-b33e89dedc3e66bc811609100f5e367e10eea529ce2b00beb504a8dd6ce27373.json  query-bc27a90a4ac6b9c24d37f2d00b8f2e27eccd19487f262b30b32498acdf033fdb.json  query-cb9b4758ef7b6112ed098e0861a60cfac1a4f4bb184849aed890ec50efc9592f.json  query-d916ccae8b3ea27ac894a374e0acd129ae9eee9c781795748b317e3bd0337c0b.json
lib/shared/src/: webscrape.rs
lib/shared/src/models/: mod.rs
lib/shared/src/models/agents/: database.rs  mod.rs  runtime.rs  state.rs  types.rs
lib/shared/src/models/runtime_sessions/: execution.rs  mod.rs  types.rs
lib/shared/src/models/signals/: conversion.rs  database.rs  execution.rs  types.rs
lib/shared/src/models/steps/: conversion.rs  database.rs  execution.rs  mod.rs
lib/shared/src/tests/: mod.rs  test_agents.rs  test_lib.rs  test_steps.rs
server/: .env-example  .pre-commit-config.yaml  .tmuxinator.yml  Cargo.toml  Dockerfile  README.txt  api.nginx.conf  db_schema.hcl  docker-compose.yml  reset_db.sh  scheme.hcl  seed.sql  start.sh
server/bridge/: .env-example  Dockerfile  README.md  install_deps.ps1  install_deps.sh  main.py  mypy.ini  pyproject.toml  run_mypy.sh
server/bridge/src/: __init__.py  lib.py  main.py
server/bridge/src/proto/: README.md  __init__.py  bridge_message_pb2.py  bridge_message_pb2_grpc.py  build_proto.py
server/bridge/tests/: __init__.py  tcp_server.py  test_bridge.py  test_client.py
server/engine/: .env-example  Cargo.toml  Dockerfile  README.md  build.rs
server/engine/src/: lib.rs  main.rs
server/engine/src/core/: agent_manager.rs  mod.rs  rpc_server.rs
server/engine/src/handlers/: command.rs  create.rs  delete.rs  fyi.rs  mod.rs  run.rs  sync.rs
server/engine/src/models/: agents.rs  mod.rs  runtime_sessions.rs  signals.rs  steps.rs
server/examples/: README.md  seed.sql  test_hacker_news.sql
server/proto/: bridge_message.proto
server/runtime/: Cargo.toml
server/runtime/src/: main.rs
server/src/: api.rs  crypto.rs  lib.rs  main.rs
server/src/keys/: id_ed25519.pub
server/src/migrations/: migrate.sh  schema.sql
server/src/migrations/versions/: v1__init_schema.sql
server/src/models/: agents.rs  db.rs  jobs.rs  missions.rs  mod.rs  runtime.rs  runtime_sessions.rs  session.rs  signals.rs  steps.rs  user_jobs.rs
server/supabase/: config.toml
shared/: Cargo.toml  README.txt
shared/.sqlx/: query-07a954e327adc14d643651dc193b282a9370812bc76cf8923743aaf858bc052c.json  query-11281e9db4b4b5b28ada389ca0130b587b29fb562cceca003a9fcca91da2a531.json  query-1b0f5aa4a5fd641c6171a986473b819a47cea53bd91fd45a3caff1abc47c476e.json  query-2c46208468abeec387f08f4c5bdd04aa87d827091f9259fc90f8b3bb273af1e2.json  query-3d33386aea3304497b84987669edfa68badaacbb3203c64cda7529accfb8b7b6.json  query-40a1f676d8bda9be8544bdfeab35c2816097356ffe118ceb7364843e90f3b8b4.json  query-5663bd4be740688632a835ed99e23d9aec83e96a6c9ea6aa93dcf2393f922c56.json  query-6a066a85f961115a15781365c378568224175c316c7184511e171342d1b817d2.json  query-6a42e53face73d53df976e6c0c3c73e109ed60c1c896b5b500eb1af859ad4f86.json  query-6c16d7487eb6f5086a1bbea51389a27a2babdc2a8fc67191ae948aaacd215679.json  query-6cfde68638c7b4b54dda711e8cd235ed5a0c02d28be4e9ea82efb53198ac1c18.json  query-6ddd1f14ef12ec31da971a94402003bc3b80d66ecf7852eb0a98e4fbf4565a3f.json  query-71f8e64955fe7b0da5c2ff569fb30672a4aa6f37abc93d24316fd992c413782c.json  query-8c9a383d265143f0eb33f7a696233a93b841abe213e29b01a1cc8b2d18247ed9.json  query-90fc9a0fb7eab6c51eb4819749740118c83a3259a94a90eee2c5a72ef7e2287e.json  query-a9de3c72ede9cf41edb944bcb0b2b2c14ac0066466c2be6b4444125e055b294a.json  query-cd1a663084d34ad5e9a8c6d9e38f76d3820e725ab794f91f390d3229c7993a09.json  query-d2c50c9dbb521f1b6af92a50fe834fe9be522996e3c9ac599f8772f553e01a53.json  query-edc96b5de8e6740d688209c17fbbe107e10edf6c6d9f8a5903ae971298e5e600.json  query-efda2b18024ac69ae5f28558451982f0359714af8b37b267eac0c912ca15ee9b.json  query-f90430cc4aaad8aab23be7e45f81326fd948c8f5dd8799b541ac1bdcca04ea28.json
shared/src/: lib.rs  python_runtime.rs  tests.rs  webscrape.rs
shared/src/models/: agents.rs  mod.rs  runtime_sessions.rs  signals.rs  steps.rs
shared/src/models/runtime_sessions/: database.rs  execution.rs  types.rs
shared/src/models/signals/: mod.rs
shared/src/models/steps/: execution.rs  mod.rs  types.rs
shared/src/tests/: mod.rs  test_agents.rs  test_lib.rs  test_runtime_sessions.rs  test_signals.rs  test_steps.rs
(+46 files in other folders)
