[package]
name = "portico-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = "0.23.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = "1.43.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-webpki" ] } # NOTE: WebPKI picked arbitrarily
actix-web = "4.9.0"
uuid = { version = "1.12.0", features = ["v4"] }
dotenv = "0.15.0"
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.11"
actix-web-httpauth = "0.8.2"
