[package]
name = "portico-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = "0.23.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43", features = ["full"] }
uuid = { version = "1.12.0", features = ["v4"] }
dotenv = "0.15.0"
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.11"
actix-web-httpauth = "0.8.2"
chrono = "0.4.39"
cron = "0.15.0"
async-trait = "0.1.85"
glob = "0.3.2"
postgrest = "1.6.0"
