[package]
name = "portico-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
socketioxide = "0.10"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.0", features = ["v4"] }
dotenv = "0.15.0"
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2.0.11"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15.0"
async-trait = "0.1.85"
glob = "0.3.2"
postgrest = "1.6.0"
serde_with = "3.12.0"
humantime-serde = "1.1.1"
rand = "0.8"
pyo3 = { version = "0.23.4", features = ["auto-initialize"] }
