[package]
name = "portico-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.0", features = ["v4"] }
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.24.2", features = ["auto-initialize"] }
scraper = "0.18.1"
url = "2.5.0"
# SQLx with all needed features
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "uuid", "chrono", "json", "bigdecimal"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.88"
strum = { version = "0.24", optional = true, features = ["derive"] }
typed-builder = { version = "0.10", optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.3"
