[project]
name = "portico-bridge"
version = "0.1.0"
description = "Python bridge for Portico engine"
authors = [
    {name = "Eric Pan", email= "epan@stoamedical.io"}
]
requires-python = ">=3.9"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "python-dotenv>=1.0.1",
    "supabase>=2.13.0",
    "gotrue>=2.0.0",        # Supabase auth
    "postgrest>=0.15.0",    # Supabase database
    "storage3>=0.8.0",      # Supabase storage
    "supafunc>=0.3.0",      # Supabase functions
    "realtime>=1.0.0",      # Supabase realtime
    "httpx>=0.24.0",        # Required by Supabase SDK
    "grpcio>=1.62.1",
    "grpcio-tools>=1.62.1",
    "protobuf>=4.25.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "types-protobuf>=4.25.0",
    "mypy>=1.8.0",
]
