[package]
name = "portico-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12.0", features = ["v4"] }
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.23.4", features = ["auto-initialize"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
