[package]
name = "portico-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.95"
dotenvy = "0.15.7"
sqlx = "0.8.3"
portico-shared = { path = "../../lib/shared" }
tonic = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
futures = "0.3.30"
chrono = "0.4.34"
uuid = { version = "1.6.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10.2"
